--- a/res/layout/question_item.xml
+++ b/res/layout/question_item.xml
@@ -6,12 +6,12 @@
 
     <TextView
         android:id="@+id/questionTitle"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="left"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="5dp"
-        android:layout_weight="1"
+        android:layout_weight="0.35"
         android:gravity="center_vertical"
         android:padding="10dp"
         android:textSize="17sp" />
@@ -25,8 +25,8 @@
 
      <TextView
          android:id="@+id/answersNumber"
-         android:layout_width="wrap_content"
-         android:layout_height="fill_parent"
+         android:layout_width="match_parent"
+         android:layout_height="match_parent"
          android:layout_gravity="right"
          android:layout_weight="1"
          android:gravity="center"
