--- a/res/layout/activity_user.xml
+++ b/res/layout/activity_user.xml
@@ -115,7 +115,7 @@
                             android:orientation="horizontal" >
 
                             <TextView
-                                android:id="@+id/textViewReputationUserList"
+                                android:id="@+id/textView14"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="5dp"
@@ -190,7 +190,7 @@
             android:orientation="vertical" >
 
             <TextView
-                android:id="@+id/textView11"
+                android:id="@+id/textViewAboutMe"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="TextViewasdfsffsfsfsfsdffffff dff dss sdfsdfsdfdfsfadsfdsfsfasdfsfasdfasfsadfsadfasfsdfsdfasdfsafsfasdfsdfsdfasdf" />
