--- a/res/layout/user_item.xml
+++ b/res/layout/user_item.xml
@@ -23,7 +23,7 @@
             android:textSize="18sp" />
 
         <TextView
-            android:id="@+id/textViewReputationUserList"
+            android:id="@+id/textView14"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
