--- a/res/layout/activity_home.xml
+++ b/res/layout/activity_home.xml
@@ -22,6 +22,13 @@
 
     </SearchView>
 
+    <TextView
+        android:id="@+id/home_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:text="@string/home_text_advsearch" />
+
     <Button
         android:id="@+id/home_tag"
         android:layout_width="match_parent"
