--- a/res/layout/activity_search.xml
+++ b/res/layout/activity_search.xml
@@ -26,7 +26,9 @@
             android:id="@+id/questionRadio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/adv_radio_question" />
+            android:text="@string/adv_radio_question"
+            android:checked="true" />
+        	
 
         <RadioButton
             android:id="@+id/tagRadion"
@@ -40,5 +42,10 @@
             android:layout_height="wrap_content"
             android:text="@string/avd_radio_user" />
     </RadioGroup>
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
