Showing comments instead of answers in a question.

--- a/res/layout/question_info.xml
+++ b/res/layout/question_info.xml
@@ -79,11 +79,11 @@
 		        android:id="@+id/buttonSeeAnswers"
 		        android:layout_width="match_parent"
 		        android:layout_height="wrap_content"
-		        android:onClick="showAnswers"
-		        android:text="See Answers" />
+		        android:onClick="showComments"
+		        android:text="See Comments" />
 
 		    <ListView
-		        android:id="@+id/listViewAnswersOfQuestion"
+		        android:id="@+id/listViewCommentsOfQuestion"
 		        android:layout_width="wrap_content"
 		        android:layout_height="wrap_content"
 		        android:layout_marginTop="10dp" >
