--- a/res/layout/activity_search.xml
+++ b/res/layout/activity_search.xml
@@ -44,7 +44,7 @@
     </RadioGroup>
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/commentBody"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
