--- a/res/layout/activity_search.xml
+++ b/res/layout/activity_search.xml
@@ -30,7 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@drawable/ic_launcher" />
+            android:src="@drawable/searchtransparen" />
 
     </LinearLayout>
 
