--- a/res/layout/answer_item.xml
+++ b/res/layout/answer_item.xml
@@ -9,7 +9,7 @@
         android:layout_marginBottom="5dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="7dp"
-        android:layout_weight="1"
+        android:layout_weight="0.15"
         android:orientation="vertical" >
 
         <TextView
@@ -25,6 +25,13 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
+            android:text="TextView" />
+
+        <TextView
+            android:id="@+id/textViewNumberCommentsAnswer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="TextView" />
 
     </LinearLayout>
@@ -51,6 +58,7 @@
             android:layout_marginBottom="5dp"
             android:layout_marginTop="5dp"
             android:layout_weight="1"
+            android:padding="5dp"
             android:src="@drawable/red" />
 
         <ImageView
@@ -59,6 +67,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="bottom"
             android:layout_weight="1"
+            android:padding="5dp"
             android:src="@drawable/black" />
 
     </LinearLayout>
