Created some screens for comment, answer, and skeleton por the user profile

--- a/res/layout/activity_comments.xml
+++ b/res/layout/activity_comments.xml
@@ -1,6 +1,22 @@
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/listViewComments"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
 
-</ListView>
+    <ListView
+        android:id="@+id/listViewComments"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="8" >
+
+	</ListView>
+
+    <Button
+        android:id="@+id/buttonCommentPost"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:layout_weight="1"
+        android:text="Add a comment" />
+
+</LinearLayout>
