--- a/res/layout/activity_answers.xml
+++ b/res/layout/activity_answers.xml
@@ -1,6 +1,22 @@
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/listViewAnswers"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
+	
+    <ListView
+        android:id="@+id/listViewAnswers"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="8" >
 
 </ListView>
+
+    <Button
+        android:id="@+id/buttonAnswerQuestion"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:layout_weight="1"
+        android:text="Answer this question" />
+
+</LinearLayout>
