--- a/res/layout/activity_home.xml
+++ b/res/layout/activity_home.xml
@@ -30,6 +30,12 @@
         android:text="@string/home_text_advsearch" />
 
     <Button
+        android:id="@+id/home_make_question"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/home_make_question" />
+
+    <Button
         android:id="@+id/home_tag"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
