Changes in the user profile to show user's post, favourites and tags.

--- a/res/layout/activity_ask_question.xml
+++ b/res/layout/activity_ask_question.xml
@@ -41,6 +41,7 @@
         android:id="@+id/textViewBodyAskQuestion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:text="Body:" />
 
     <EditText
