--- a/res/layout/answer_item.xml
+++ b/res/layout/answer_item.xml
@@ -61,6 +61,13 @@
             android:padding="5dp"
             android:src="@drawable/red" />
 
+        <TextView
+            android:id="@+id/textViewScore"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Medium Text" />
+
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="match_parent"
