--- a/res/layout/activity_home.xml
+++ b/res/layout/activity_home.xml
@@ -8,6 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/backgroundimage"
     tools:context=".HomeActivity" >
 
     <SearchView
@@ -58,5 +59,6 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/home_myacc" />
+
 
 </LinearLayout>
