--- a/res/layout/comment_item.xml
+++ b/res/layout/comment_item.xml
@@ -6,7 +6,8 @@
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"
     android:layout_marginTop="5dp"
-    android:orientation="vertical" >
+    android:orientation="vertical" 
+     android:background="@drawable/background">
 
     <TextView
         android:id="@+id/commentBody"
