--- a/res/layout/question_info.xml
+++ b/res/layout/question_info.xml
@@ -1,7 +1,8 @@
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/scrollView1"
         android:layout_width="fill_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@drawable/background">
 
 
     
